# pazer_dataform_python

./: pyproject.toml  setup.py
