[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pazer_dataform_python"
version = "0.1.0"
authors = [{ name = "David Kim", email = "woody@woody.co.kr" }]
description = "Pazer DataForm - Python"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["pazer", "dataform"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pazer-app/pazer_dataform_python"
"Bug Tracker" = "https://github.com/pazer-app/pazer_dataform_python/issues"